<resources>
    <string name="app_name">Sureti</string>
    <string name="txt_sign_in_or_create_account">Sign In or Create Account</string>
    <string name="txt_policyholder_account">POLICYHOLDER ACCOUNT</string>
    <string name="txt_email">Email</string>
    <string name="txt_next">Next</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_password">Password</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_forgot_password"><u>Forgot Password?</u></string>
    <string name="txt_first_name">First Name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_open_checks">Open Checks</string>
    <string name="txt_check">Check#:</string>
    <string name="txt_amount">Amount#:</string>
    <string name="txt_claim">Claim#:</string>
    <string name="txt_loan">Loan#:</string>
    <string name="txt_preferred_contractor">Preferred Contractor:</string>
    <string name="txt_branch_name">Branch Name:</string>
    <string name="txt_loss_address">Loss Address:</string>
    <string name="txt_apt_ste">APT/STE:</string>
    <string name="_3d_scans">3d Scans</string>
    <string name="contractor_documents">Contractor Documents</string>
    <string name="policyholder_documents">PolicyHolder Documents</string>
    <string name="txt_policyholder_claim_packet">Policyholder Claim Packet</string>
    <string name="certificate_of_completion">Certificate of Completion</string>
    <string name="contractor_claim_packet">Contractor Claim Packet</string>
    <string name="contract_proposal">Contract/Proposal</string>
    <string name="approved_scope_of_work">Approved Scope of Work</string>
    <string name="post_mitigation">Post-Mitigation</string>
    <string name="post_repair">Post-Repair</string>
    <string name="progress">Progress</string>
    <string name="policyholder_collaborators">Policyholder Collaborators:</string>
    <string name="branch_collaborators">Branch Collaborators:</string>
    <string name="message">Message</string>
    <string name="upload_new_two_party_check">Upload New Two-Party Check</string>
</resources>